# optimal-transport-loss-test

./: main.py  pyproject.toml
